Fix issue with button alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -38,6 +38,7 @@ a{
   border-radius: 40px !important;
   border: 0 !important;
   font-size: 18px !important;
+  margin: 0 auto !important;
 }
 .btn-close{
   // background: none !important;
